--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,28 @@ body
 {
     font-family: 'Raleway', sans-serif;
 }
+
+@media  screen and (min-width: 768px)
+{
+    #container
+    {
+        width: 1440px;
+    }
+
+    .search_icon
+    {
+        visibility: hidden;
+    }
+}
+
+@media (max-width: 768px)
+{
+    #container
+    {
+        width: 375px;
+    }
+    .search_text
+    {
+        visibility: hidden;
+    }
+}
