--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,35 @@
 body
 {
+    display: flex;
     font-family: 'Raleway', sans-serif;
+}
+footer, #most_popular
+{
+    background-color: #F2F2F2;
+}
+.filter_icons
+{
+    background-color: #DEEBFF;
+    color: #0065FC;
+}
+.search_button
+{
+    background-color: #0065FC;
+}
+.inscription
+{
+    color: #0065FC;
+}
+.hosting_link:hover, .activities_link:hover
+{
+    color: #0065FC;
+    border-top-style: solid;
+    border-top-color: #0065FC;
+}
+.hosting_link, .activities_link
+{
+    color: black;
+    text-decoration: none;
 }
 
 @media  screen and (min-width: 768px)
@@ -9,11 +38,29 @@ body
     {
         width: 1440px;
     }
-
+    .search_text
+    {
+        color: white;
+    }
     .search_icon
     {
         visibility: hidden;
     }
+    #hosting
+    {
+        background-color: #F2F2F2;
+    }
+    nav
+    {
+        display: flex;
+        flex-direction: row;
+    }
+    header
+    {
+        display: flex;
+        justify-content: space-between;
+    }
+
 }
 
 @media (max-width: 768px)
@@ -21,6 +68,10 @@ body
     #container
     {
         width: 375px;
+    }
+    .search_icon
+    {
+        color: white;
     }
     .search_text
     {
