--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,7 @@ body
     color: black;
     text-decoration: none;
 }
-.hosting_link:hover, .activities_link:hover
-{
-    color: #0065FC;
-    border-top-style: solid;
-    border-top-color: #0065FC;
-    border-top-width: 2px;
-}
+
 footer, #most_popular
 {
     background-color: #F2F2F2;
@@ -58,6 +52,13 @@ footer, #most_popular
         width: 310px;
         position: absolute;
         left: 949px;
+    }
+    .hosting_link:hover, .activities_link:hover
+    {
+        color: #0065FC;
+        border-top-style: solid;
+        border-top-color: #0065FC;
+        border-top-width: 2px;
     }
     .hosting_link, .activities_link
     {
@@ -290,42 +291,43 @@ footer, #most_popular
     .hosting_1
     {
         margin-left: 40px;
-        background-image: url("Images/Hebergements/medium/auberge_cannebiere.jpg");
+        background-image: url("Images/Hebergements/large/auberge_cannebiere.jpg");
         background-size: 236px 115px;
         background-repeat: no-repeat;
     }
     .hosting_2
     {
-        background-image: url("Images/Hebergements/medium/hotel_port.jpg");
+        background-image: url("Images/Hebergements/large/hotel_port.jpg");
         background-size: 236px 115px;
         background-repeat: no-repeat;
     }
     .hosting_3
     {
         margin-right: 40px;
-        background-image: url("Images/Hebergements/medium/hotel_mouette.jpg");
+        background-image: url("Images/Hebergements/large/hotel_mouette.jpg");
         background-size: 236px 115px;
         background-repeat: no-repeat;
     }
     .hosting_4
     {
         margin-left: 40px;
-        background-image: url("Images/Hebergements/medium/hotel_mer.jpg");
+        background-image: url("Images/Hebergements/large/hotel_mer.jpg");
         background-size: 236px 115px;
         background-repeat: no-repeat;
     }
     .hosting_5
     {
-        background-image: url("Images/Hebergements/medium/auberge_panier.jpg");
+        background-image: url("Images/Hebergements/large/auberge_panier.jpg");
         background-size: 236px 115px;
         background-repeat: no-repeat;
     }
     .hosting_6
     {
         margin-right: 40px;
-        background-image: url("Images/Hebergements/medium/hotel_amina.jpg");
+        background-image: url("Images/Hebergements/large/hotel_amina.jpg");
         background-size: 236px 115px;
         background-repeat: no-repeat;
+
     }
     .hosting_footer
     {
@@ -406,14 +408,14 @@ footer, #most_popular
     .popular_1
     {
         margin-top: 16px;
-        background-image: url("Images/Populaires/medium/hotel_matin.jpg");
+        background-image: url("Images/Populaires/large/hotel_matin.jpg");
         background-size: 128px 135px;
         background-repeat: no-repeat;
         background-position: left;
     }
     .popular_2
     {
-        background-image: url("Images/Populaires/medium/coeur_eau.jpg");
+        background-image: url("Images/Populaires/large/coeur_eau.jpg");
         background-size: 128px 135px;
         background-repeat: no-repeat;
         background-position: left;
@@ -421,7 +423,7 @@ footer, #most_popular
     .popular_3
     {
         margin-bottom: 34px;
-        background-image: url("Images/Populaires/medium/hotel_bleu_blanc.jpg");
+        background-image: url("Images/Populaires/large/hotel_bleu_blanc.jpg");
         background-size: 128px 135px;
         background-repeat: no-repeat;
         background-position: left;
@@ -491,7 +493,7 @@ footer, #most_popular
         border: 1px solid #EFEFEF;
         border-radius: 16px;
         background-color: white;
-        background-image: url("Images/Activites/medium/vieux_port.jpg");
+        background-image: url("Images/Activites/large/vieux_port.jpg");
         background-size: 300px 386px;
         background-repeat: no-repeat;
         box-shadow: 0 0 5px 5px #EFEFEF;
@@ -511,7 +513,7 @@ footer, #most_popular
         border: 1px solid #EFEFEF;
         border-radius: 16px;
         background-color: white;
-        background-image: url("Images/Activites/medium/fort_pomegues.jpg");
+        background-image: url("Images/Activites/large/fort_pomegues.jpg");
         background-size: 300px 180px;
         background-repeat: no-repeat;
         box-shadow: 0 0 5px 5px #EFEFEF;
@@ -531,7 +533,7 @@ footer, #most_popular
         border: 1px solid #EFEFEF;
         border-radius: 16px;
         background-color: white;
-        background-image: url("Images/Activites/medium/iles_frioul.jpg");
+        background-image: url("Images/Activites/large/iles_frioul.jpg");
         background-size: 300px 110px;
         background-repeat: no-repeat;
         box-shadow: 0 0 5px 5px #EFEFEF;
@@ -551,7 +553,7 @@ footer, #most_popular
         border: 1px solid #EFEFEF;
         border-radius: 16px;
         background-color: white;
-        background-image: url("Images/Activites/medium/parc_national_calanques.jpg");
+        background-image: url("Images/Activites/large/parc_national_calanques.jpg");
         background-size: 300px 386px;
         background-repeat: no-repeat;
         box-shadow: 0 0 5px 5px #EFEFEF;
@@ -571,7 +573,7 @@ footer, #most_popular
         border: 1px solid #EFEFEF;
         border-radius: 16px;
         background-color: white;
-        background-image: url("Images/Activites/medium/notre_dame.jpg");
+        background-image: url("Images/Activites/large/notre_dame.jpg");
         background-size: 300px 140px;
         background-repeat: no-repeat;
         box-shadow: 0 0 5px 5px #EFEFEF;
@@ -591,7 +593,7 @@ footer, #most_popular
         border: 1px solid #EFEFEF;
         border-radius: 16px;
         background-color: white;
-        background-image: url("Images/Activites/medium/parc_longchamp.jpg");
+        background-image: url("Images/Activites/large/parc_longchamp.jpg");
         background-size: 300px 155px;
         background-repeat: no-repeat;
         box-shadow: 0 0 5px 5px #EFEFEF;
@@ -645,6 +647,49 @@ footer, #most_popular
     #container
     {
         width: 375px;
+        height: 4550px;
+        display: flex;
+        flex-direction: column;
+    }
+    header
+    {
+        height: 129px;
+        display: flex;
+        flex-wrap: wrap;
+
+    }
+    .logo
+    {
+        width: 94px;
+        margin: 16px 0px 0px 20px;
+        display: flex;
+        align-items: flex-start;
+        order: 1;
+    }
+    .inscription
+    {
+        display: flex;
+        height: 16px;
+        margin: 42px 0px 0px 170px;
+        color: #0065FC;
+        font-weight: bold;
+        align-items: flex-end;
+        order: 2;
+    }
+    nav
+    {
+        display: flex;
+        align-self: flex-end;
+        width: 375px;
+        order: 3;
+        justify-content: space-between;
+    }
+    .hosting_link, .activities_link
+    {
+        width: 187px;
+        display: flex;
+        flex-direction: row;
+        align-content: center;
     }
     .fab.fa-sistrix
     {
